# server/Api/DTOs/UserDto.cs
@@ -17,6 +17,6 @@ public class UserDto
     public string FullName { get; set; }
     public string PhoneNumber { get; set; }
     public string Email { get; set; }
-    public UserRole Role { get; set; }
+    public string Role { get; set; }
     public bool IsActive { get; set; }
 }
